--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -48,7 +48,6 @@
     &.__contacts {
       font-size: 16px;
       font-weight: 700;
-      text-align: center;
       text-transform: uppercase;
       width: 465px;
       a {
@@ -976,6 +975,51 @@
 // .. ELEMENTS
 //
 //****************************************************************************************************
+//
+// .. CONTACTS BLOCK
+//
+.contacts {
+  padding: 10px;
+  position: relative;
+  &::before {
+    background-color: $muted-color;
+    content: '';
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    left: 50%;
+    width: 1px;
+    @include prefixes(transform, translate(-50%, 0));
+  }
+}
+  .contacts_cell {
+    display: inline-block;
+    position: relative;
+    width: 50%;
+    vertical-align: middle;
+    @include prefixes(box-sizing, border-box);
+    &.__phone {
+
+    }
+    &.__links {
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 20px;
+      text-transform: none;
+      a {
+        color: $link-color-hover;
+        &:hover {color: $link-color-hover;}
+      }
+      .ico {
+        margin-right: 10px;
+        position: relative;
+        top: -1px;
+        &.__mail  {margin-left: 10px;}
+        &.__skype {margin-left: 12px;}
+      }
+    }
+  }
+
 //
 // .. USER BLOCK
 //
