--- a/views/layouts/_bar.haml
+++ b/views/layouts/_bar.haml
@@ -33,7 +33,7 @@
             %li.dropdown_menu_i
               %a{href: "#", class: "dropdown_menu_i_a"} UGR
     .bar_i.__contacts
-      .bar_i_inner.tx.__center
+      .bar_i_inner
         +375 (29) 610-26-26
         &nbsp;
         +375 (29) 268-90-90
