--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -158,7 +158,6 @@
 //****************************************************************************************************
 .header {
   background-color: #fff;
-  padding: 30px 0;
   @include media-query(desktop) {
     &.__sticky {
       position: fixed;
@@ -171,6 +170,52 @@
     }
   }
 }
+  .header_i {
+    display: table-cell;
+    height: 170px;
+    padding: 0 20px;
+    vertical-align: middle;
+    &.__logo {
+      width: 160px;
+    }
+    &.__about {
+      border-left: 1px solid transparent;
+      width: 280px;
+      &:hover {
+        border-left: 1px solid $muted-color;
+        @include linear-gradient(vertical, #f2f2f2, #fff);
+      }
+    }
+    &.__wish {
+      border-left: 1px solid $muted-color;
+      width: 180px;
+      &:hover {
+        @include linear-gradient(vertical, #f2f2f2, #fff);
+      }
+    }
+    &.__basket {
+      border-right: 1px solid transparent;
+      border-left:  1px solid $muted-color;
+      width: 320px;
+      &:hover {
+        border-right: 1px solid $muted-color;
+        @include linear-gradient(vertical, #f2f2f2, #fff);
+      }
+    }
+  }
+    .header_i_a {
+      color: $link-color-hover;
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 20px;
+      text-transform: uppercase;
+      &.__pseudo {border-color: $link-color-hover !important;}
+      &:not(.__pseudo) {border-bottom: 1px solid $link-color-hover;}
+    }
+    .header_i_caption {
+
+    }
+
 
 
 //****************************************************************************************************
