--- a/demo/index.haml
+++ b/demo/index.haml
@@ -2,7 +2,7 @@
   %article
     %header.m-b_4
       %a{href: "/"}
-        %img{src: "/assets/images/logo.png", class: "va-t", width: 130, height: 111, alt: "Магазин косметики Pudra.by"}
+        %img.va-t{src: "/assets/images/logo.png", width: 130, height: 111, alt: "Магазин косметики Pudra.by"}
 
     %nav.demo
 
