--- a/views/common/_catalogs.haml
+++ b/views/common/_catalogs.haml
@@ -178,4 +178,4 @@
         %a{href: "/catalog"} Для женщин
         %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
-    %a{href: "/catalog", class: "o-h"} Парфюмерия
+    %a.o-h{href: "/catalog"} Парфюмерия
