--- a/views/common/banners/_catalog.haml
+++ b/views/common/banners/_catalog.haml
@@ -1,6 +1,6 @@
 .imageslider.__banners
   .slider
     - 1.upto(3) do
-      %a{href: "#", class: "slide"}
+      %a.slide{href: "#"}
         %img{src: "/assets/images/fake/banner_1.jpg", width: "700", height: "200", alt: ""}
   %ul.slider-nav
