--- a/views/common/item/_item_hit.haml
+++ b/views/common/item/_item_hit.haml
@@ -4,7 +4,7 @@
     %a{href: "/catalog_show#{hash}"} Dance legend
   .item_photo
     %a{href: "/catalog_show#{hash}"}
-      %img{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", class: "va-t", width: 130, height: 120, alt: "Коллекция лаков для ногтей Sahara Crystal"}
+      %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Коллекция лаков для ногтей Sahara Crystal"}
   .item_caption
     %a{href: "/catalog_show#{hash}"} Коллекция лаков для ногтей Sahara Crystal
   %footer.item_price
