--- a/views/common/item/_item_order.haml
+++ b/views/common/item/_item_order.haml
@@ -4,7 +4,7 @@
     %a{href: "/catalog_show#{hash}"} Dance legend
   .item_photo
     %a{href: "/catalog_show#{hash}"}
-      %img{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", class: "va-t", width: 130, height: 120, alt: "Лак для ногтей c растрескивающимся эффектом Crack"}
+      %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Лак для ногтей c растрескивающимся эффектом Crack"}
   .item_caption
     %a{href: "/catalog_show#{hash}"} Лак для ногтей c&nbsp;растрескивающимся эффектом Crack
   %footer.item_price
