--- a/views/common/item/_item_stock.haml
+++ b/views/common/item/_item_stock.haml
@@ -4,7 +4,7 @@
     %a{href: "/catalog_show#{hash}"} Max Factor
   .item_photo
     %a{href: "/catalog_show#{hash}"}
-      %img{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", class: "va-t", width: 130, height: 120, alt: "Подтягивающий концентрат для лица Hydro Active Lifting"}
+      %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Подтягивающий концентрат для лица Hydro Active Lifting"}
   .item_caption
     %a{href: "/catalog_show#{hash}"} Подтягивающий концентрат для лица Hydro Active Lifting
   %footer.item_price
