--- a/index.haml
+++ b/index.haml
@@ -8,20 +8,20 @@
           .imageslider.__promo
             .slider
               - 1.upto(3) do
-                %a{href: "#", class: "slide"}
+                %a.slide{href: "#"}
                   %img{src: "/assets/images/fake/promo_#{rand(2..3)}.jpg", width: "660", height: "360", alt: ""}
             %ul.slider-nav
 
       #tabs.tabs.__catalog.m-b_4
         %ul
           %li
-            %a{href: "#news", class: "a __pseudo"} Новинки
+            %a.a.__pseudo{href: "#news"} Новинки
           %li
-            %a{href: "#stock", class: "a __pseudo"} Акции
+            %a.a.__pseudo{href: "#stock"} Акции
           %li
-            %a{href: "#hit", class: "a __pseudo"} Лидеры продаж
+            %a.a.__pseudo{href: "#hit"} Лидеры продаж
           %li
-            %a{href: "#order", class: "a __pseudo"} Под заказ
+            %a.a.__pseudo{href: "#order"} Под заказ
         #news
           .layer
             .iosslider.__catalog
@@ -35,7 +35,7 @@
                 %li.slider-nav_i.__current
                 - 1.upto(4) do
                   %li.slider-nav_i
-              %a{href: "/catalog", class: "slider-more"} Все новинки
+              %a.slider-more{href: "/catalog"} Все новинки
         #stock
           .layer
             .iosslider.__catalog
@@ -49,7 +49,7 @@
                 %li.slider-nav_i.__current
                 - 1.upto(4) do
                   %li.slider-nav_i
-              %a{href: "/catalog", class: "slider-more"} Все акции
+              %a.slider-more{href: "/catalog"} Все акции
         #hit
           .layer
             .iosslider.__catalog
@@ -63,7 +63,7 @@
                 %li.slider-nav_i.__current
                 - 1.upto(4) do
                   %li.slider-nav_i
-              %a{href: "/catalog", class: "slider-more"} Все лидеры продаж
+              %a.slider-more{href: "/catalog"} Все лидеры продаж
         #order
           .layer
             .iosslider.__catalog
@@ -77,12 +77,12 @@
                 %li.slider-nav_i.__current
                 - 1.upto(4) do
                   %li.slider-nav_i
-              %a{href: "/catalog", class: "slider-more"} Все под заказ
+              %a.slider-more{href: "/catalog"} Все под заказ
 
       .grid
         .grid-i.__grid-4
-          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+          %img.c-bg.__gray{src: "/assets/images/blank.gif", width: "100%", height: 200, alt: ""}
         .grid-i.__grid-4
-          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+          %img.c-bg.__gray{src: "/assets/images/blank.gif", width: "100%", height: 200, alt: ""}
         .grid-i.__grid-4
-          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+          %img.c-bg.__gray{src: "/assets/images/blank.gif", width: "100%", height: 200, alt: ""}
