--- a/views/common/_breadcrumbs.haml
+++ b/views/common/_breadcrumbs.haml
@@ -1,3 +1,3 @@
 %nav.breadcrumbs
-  %a{href: "/", class: "breadcrumbs_i"} Главная
-  %span{class: "breadcrumbs_i __current"} Заголовок текущей страницы
+  %a.breadcrumbs_i{href: "/"} Главная
+  %span.breadcrumbs_i.__current Заголовок текущей страницы
