--- a/views/common/_headline.haml
+++ b/views/common/_headline.haml
@@ -4,6 +4,6 @@
       %h1.headline_t Заголовок текущей страницы
     .grid-i.__grid-2.va-b
       .tx.__right
-        %a{href: "#", class: "headline_print"}
+        %a.headline_print{href: "#"}
           %i.ico.__16.__print
           На печать
