--- a/views/common/catalog/_load_more.haml
+++ b/views/common/catalog/_load_more.haml
@@ -1,3 +1,3 @@
-%a{href: "#", id: "load", class: "load", rel: "feed"}
+%a.load{href: "#", id: "load", rel: "feed"}
   Загрузить еще 15
   %i#refresher.ico.__14.__refresh
