--- a/views/common/item/_item_new.haml
+++ b/views/common/item/_item_new.haml
@@ -4,7 +4,7 @@
     %a{href: "/catalog_show#{hash}"} Relouis
   .item_photo
     %a{href: "/catalog_show#{hash}"}
-      %img{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", class: "va-t", width: 130, height: 120, alt: "Микронизированные компактные румяна La Mia Italia"}
+      %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Микронизированные компактные румяна La Mia Italia"}
   .item_caption
     %a{href: "/catalog_show#{hash}"} Микронизированные компактные румяна La Mia Italia
   %footer.item_price
