--- a/assets/stylesheets/components.scss
+++ b/assets/stylesheets/components.scss
@@ -16,6 +16,8 @@
   $c-color-violet: #9b59b6; // .. amethyst
   $c-color-gray:   #95a5a6; // .. concrete
   $c-color-dark:   #2c3e50; // .. midnight blue
+  $c-color-white:  #fff;    // .. white
+  $c-color-black:  #000;    // .. black
 
 
 
@@ -33,6 +35,8 @@
     &.__violet {background-color: lighten($c-color-violet, 25%);}
     &.__gray   {background-color: lighten($c-color-gray,   25%);}
     &.__dark   {background-color: lighten($c-color-dark,   25%);}
+    &.__white  {background-color: $c-color-white;}
+    &.__black  {background-color: $c-color-black;}
   }
 
 
@@ -44,8 +48,8 @@
   //****************************************************************************************************
   .c-badge {
     padding: .1rem .6rem;
-    color: #fff;
     border-radius: .3rem;
+    color: #fff;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .33);
     @extend .tx.__s;
 
@@ -69,8 +73,8 @@
   //
   //****************************************************************************************************
   .c-border {
-    border-style: solid;
     border-width: 1px;
+    border-style: solid;
     &.__red    {border-color: lighten($c-color-red,    20%);}
     &.__orange {border-color: lighten($c-color-orange, 20%);}
     &.__yellow {border-color: lighten($c-color-yellow, 20%);}
@@ -91,8 +95,8 @@
   .c-breadcrumbs {}
     .c-breadcrumbs_i {
       display: inline-block;
-      vertical-align: top;
       color: #ccc;
+      vertical-align: top;
       &:not(:last-child) {
         position: relative;
         margin-right: 2.5rem; 
@@ -122,13 +126,21 @@
 
     &:not([disabled]):hover {box-shadow: inset 0 0 .6em rgba(255, 255, 255, .33);}
     
-    &.__small {
-      padding: .15rem .75rem;
+    &.__xs {
+      padding: .075rem .45rem;
+      @extend .tx.__xs;
+    }
+    &.__s {
+      padding: .15rem .6rem;
       @extend .tx.__s;
     }
-    &.__large {
-      padding: .6rem 3rem;
+    &.__l {
+      padding: .6rem 2.4rem;
       @extend .tx.__l;
+    }
+    &.__xl {
+      padding: 1.2rem 3.6rem;
+      @extend .tx.__xl;
     }
 
     &.__red {
@@ -172,6 +184,7 @@
       &:not([disabled]):active { @include linear-gradient(vertical, #2c3e50, #566473); }
     }
   }
+  a.c-form_button:hover {color: #fff;}
 
 
 
@@ -189,6 +202,8 @@
     &.__violet {color: $c-color-violet;}
     &.__gray   {color: $c-color-gray;}
     &.__dark   {color: $c-color-dark;}
+    &.__white  {color: $c-color-white;}
+    &.__black  {color: $c-color-black;}
   }
 
 
@@ -199,8 +214,8 @@
   //
   //****************************************************************************************************
   .c-navigation {
-    font-size: 200%;
     text-align: center;
+    font-size: 200%;
   }
     .c-navigation_i {
       display: inline-block;
