--- a/assets/stylesheets/layers/base/grid/responsive-auto/phone/grid.scss
+++ b/assets/stylesheets/layers/base/grid/responsive-auto/phone/grid.scss
@@ -31,16 +31,16 @@
         margin-left: $grid-responsive-col-gutter#{"%"};
       }
       > .grid-i.__grid-1,
-      > .grid-i.__grid-2 {width: 33.333% - $grid-responsive-col-gutter;}
+      > .grid-i.__grid-2  {width: 50% - $grid-responsive-col-gutter;}
       > .grid-i.__grid-3,
-      > .grid-i.__grid-4 {width: 50% - $grid-responsive-col-gutter;}
+      > .grid-i.__grid-4,
       > .grid-i.__grid-5,
       > .grid-i.__grid-6, 
       > .grid-i.__grid-7,
       > .grid-i.__grid-8,  
-      > .grid-i.__grid-9  {width: 100% - $grid-responsive-col-gutter;}
+      > .grid-i.__grid-9,
       > .grid-i.__grid-10, 
-      > .grid-i.__grid-11 {width: 66.666% - $grid-responsive-col-gutter;}
+      > .grid-i.__grid-11,
       > .grid-i.__grid-12 {width: 100% - $grid-responsive-col-gutter;}
     }
     .grid-i[class*="__grid-"] {width: 100%;}
