--- a/assets/stylesheets/layers/base/styles.scss
+++ b/assets/stylesheets/layers/base/styles.scss
@@ -36,7 +36,7 @@ figure > img {display: block;}
 //
 // .. Overflow
 //
-.o-n  {overflow: none;}
+.o-v  {overflow: visible;}
 .o-h  {overflow: hidden;}
 .ox-h {
   -ms-overflow-x: hidden;
@@ -79,17 +79,17 @@ figure > img {display: block;}
 //
 .b-center {
   display: block !important;
-  margin-left:  auto !important;
   margin-right: auto !important;
+  margin-left:  auto !important;
 }
 
 //
 // .. Clearfix
 //
 .cf::after {
+  display: table;
   clear: both;
   content: "";
-  display: table;
 }
 
 //
@@ -97,8 +97,8 @@ figure > img {display: block;}
 //
 .ctn {
   display: block;
-  margin-left: auto;
   margin-right: auto;
+  margin-left:  auto;
   @if $grid == "fixed" { width: #{$grid-fixed-ctn-width - $grid-fixed-col-gutter}px; }
   @if $grid == "fluid" {
     min-width: nth($min-width-list, 1);
