--- a/assets/stylesheets/layers/styles/responsive/tablet/styles.scss
+++ b/assets/stylesheets/layers/styles/responsive/tablet/styles.scss
@@ -14,10 +14,7 @@
 
   html {font-size: nth($root-font-size-list, 2);}
   
-  body {
-    font-size:   nth($base-font-size-list, 2);
-    line-height: nth($base-line-height-list, 2);
-  }
+  @include body(2);
 
 
 
@@ -26,35 +23,6 @@
   // .. HEADINGS
   //
   //****************************************************************************************************
-  h1, .alpha {
-    font-size:   nth($h1-font-size-list, 2);
-    font-weight: nth($h1-font-weight-list, 2); 
-    line-height: nth($h1-line-height-list, 2);
-  }
-  h2, .beta {
-    font-size:   nth($h2-font-size-list, 2);
-    font-weight: nth($h2-font-weight-list, 2);
-    line-height: nth($h2-line-height-list, 2);
-  }
-  h3, .gamma {
-    font-size:   nth($h3-font-size-list, 2);
-    font-weight: nth($h3-font-weight-list, 2);
-    line-height: nth($h3-line-height-list, 2);
-  }
-  h4, .delta {
-    font-size:   nth($h4-font-size-list, 2);
-    font-weight: nth($h4-font-weight-list, 2);
-    line-height: nth($h4-line-height-list, 2);
-  }
-  h5, .epsilon {
-    font-size:   nth($h5-font-size-list, 2);
-    font-weight: nth($h5-font-weight-list, 2);
-    line-height: nth($h5-line-height-list, 2);
-  }
-  h6, .zeta {
-    font-size:   nth($h6-font-size-list, 2);
-    font-weight: nth($h6-font-weight-list, 2);
-    line-height: nth($h6-line-height-list, 2);
-  }
+  @include headers(2);
 
 }
