--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -11,6 +11,6 @@
 %link{rel: "apple-touch-icon", sizes: "114x114", href: "/apple-touch-icon-114x114-precomposed.png"}
 %link{rel: "apple-touch-icon", sizes: "144x144", href: "/apple-touch-icon-144x144-precomposed.png"}
 %link{rel: "stylesheet", href: "/assets/stylesheets/application.css"}
-%script{src: "/assets/javascripts/vendor/yepnope.1.5.4-min.js"} // .. 1.5.4
-%script{src: "/assets/javascripts/vendor/modernizr-latest.js"} // .. 2.7.1
+%script{src: "/assets/javascripts/vendor/yepnope.1.5.4-min.js"}
+%script{src: "/assets/javascripts/vendor/modernizr-latest.js"}
 %script{src: "/assets/javascripts/application.js"}
