--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -11,6 +11,26 @@
 %link{rel: "apple-touch-icon", sizes: "114x114", href: "/apple-touch-icon-114x114-precomposed.png"}
 %link{rel: "apple-touch-icon", sizes: "144x144", href: "/apple-touch-icon-144x144-precomposed.png"}
 %link{rel: "stylesheet", href: "/assets/stylesheets/application.css"}
-%script{src: "/assets/javascripts/vendor/yepnope.1.5.4-min.js"}
 %script{src: "/assets/javascripts/vendor/modernizr-latest.js"}
-%script{src: "/assets/javascripts/application.js"}
+%script{src: "/assets/javascripts/vendor/jquery-2.0.3.min.js"}
+%script{src: "/assets/javascripts/vendor/jquery-ui.min.js"}
+%script{src: "/assets/javascripts/vendor/underscore-min.js"}
+%script{src: "/assets/javascripts/vendor/backbone-min.js"}
+%script{src: "/assets/javascripts/vendor/smartresize.js"}
+%script{src: "/assets/javascripts/vendor/doublehover.js"}
+%script{src: "/assets/javascripts/scrollwidth.js"}
+%script{src: "/assets/javascripts/vendor/cycle2/jquery.cycle2.min.js"}
+%script{src: "/assets/javascripts/vendor/cycle2/jquery.cycle2.carousel.min.js"}
+%script{src: "/assets/javascripts/vendor/cycle2/jquery.cycle2.center.min.js"}
+%script{src: "/assets/javascripts/vendor/cycle2/jquery.cycle2.scrollVert.min.js"}
+%script{src: "/assets/javascripts/vendor/cycle2/jquery.cycle2.swipe.min.js"}
+%script{src: "/assets/javascripts/vendor/jquery.iosslider.min.js"}
+%script{src: "/assets/javascripts/vendor/jquery.arcticmodal-0.3.min.js"}
+%script{src: "/assets/javascripts/vendor/imagesloaded.pkgd.min.js"}
+%script{src: "/assets/javascripts/vendor/masonry.pkgd.min.js"}
+%script{src: "/assets/javascripts/vendor/accounting.min.js"}
+%script{src: "/assets/javascripts/jquery.extensions.js"}
+%script{src: "/assets/javascripts/forms.js"}
+%script{src: "/assets/javascripts/components.js"}
+%script{src: "/assets/javascripts/feed.js"}
+%script{src: "/assets/javascripts/project.js"}
