--- a/views/common/catalog/_filter.haml
+++ b/views/common/catalog/_filter.haml
@@ -133,7 +133,7 @@
                 &nbsp;
                 Подарочные наборы
 
-    .filter_block
+    .filter_block.m-b_2
       .filter_block_t
         Бренды
         %i.fa.fa-chevron-down
@@ -188,3 +188,8 @@
             %input.form_checkbox.form_el.__real{type: "checkbox"}
           &nbsp;
           T-lab Professional
+
+    .m-b_2
+      %a.form_button.__s.__rounded{href: "#"} Подобрать
+      %a.tx.__xs.__upper.__color.__major.fw-700.p-l_2.form_reset{href: "#"} Сбросить
+    %h3.tx.__upper Найдено 90 товаров          
