--- a/views/common/catalog/_load_more.haml
+++ b/views/common/catalog/_load_more.haml
@@ -1,3 +1,3 @@
-%a.load{href: "#", id: "load", rel: "feed"}
+%a.form_el.__block.form_button.__l{href: "#", id: "load", rel: "feed"}
   Загрузить еще 15
   %i#refresher.ico.__14.__refresh
